work in progress

--- a/sense2gol_pizero/settings.json
+++ b/sense2gol_pizero/settings.json
@@ -1,6 +1,6 @@
 {
     "sense2gol":{
-        "acquisition-time-s":1,
+        "number-of-frames":1,
         "samples-per-frame":128,
         "overhead":100
     },
