--- a/sense2gol_pizero/settings.json
+++ b/sense2gol_pizero/settings.json
@@ -21,6 +21,10 @@
     },
     "raspberry-pi-zero":{
         "raw-data":true,
+        "show-figure":false,
+        "save-plot":true,
+        "png-plot":true,
+        "pdf-plot":true,
         "realtime-measurements":true,
         "target-threshold-dBV":-90.0,
         "directions":3
