--- a/sense2gol_pizero/settings.json
+++ b/sense2gol_pizero/settings.json
@@ -25,6 +25,7 @@
         "save-plots":true,
         "png-plot":true,
         "pdf-plot":false,
+        "plot-path":"./sense2gol_pizero/raw-samples/",
         "realtime-measurements":true,
         "target-threshold-dBV":-90.0,
         "directions":1
