--- a/unipg_prototype/settings.json
+++ b/unipg_prototype/settings.json
@@ -1,6 +1,13 @@
 {
     "comment": "Be aware that not all the settings suggested here could be modified as you like. Read comments on sense2gol_pizero.py and Sense2GoL manuals for more information.",
-    "sense2gol":{
+    "mounting-support":{
+        "number-of-frames":1,
+        "samples-per-frame":128,
+        "overhead":100,
+        "adc-resolution-bits":12,
+        "adc-range-v":3.3
+    },
+    "picoscope":{
         "number-of-frames":1,
         "samples-per-frame":128,
         "overhead":100,
