--- a/unipg_prototype/settings.json
+++ b/unipg_prototype/settings.json
@@ -1,5 +1,5 @@
 {
-    "comment": "Be aware that not all the settings suggested here could be modified as you like. Read comments on sense2gol_pizero.py and Sense2GoL manuals for more information.",
+    "comment": "Be aware that not all the settings suggested here could be modified as you like.",
     "mounting-support":{
         "pivot-height-m":0.56,
         "water-vertical-distance-m":0,
