work in progress

--- a/unipg_prototype/settings.json
+++ b/unipg_prototype/settings.json
@@ -13,12 +13,12 @@
     },
     "accelerometer":{
         "averages":20,
-        "x_min":-249,
-        "x_max":260,
-        "y_min":-244,
-        "y_max":261,
-        "z_min":-258,
-        "z_max":242
+        "x-min":-249,
+        "x-max":260,
+        "y-min":-244,
+        "y-max":261,
+        "z-min":-258,
+        "z-max":242
     },
     "picoscope":{
         "acquisition-time-s":0.5,
